--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.6.8",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-multiselect": "^2.1.9",
     "vue-router": "^4.0.13",
     "vuedraggable": "^4.1.0",
     "vuex": "^4.0.2",
